[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/MenuButton.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="CanvasLayer"]
layer = 6
script = ExtResource( 1 )

[node name="Home" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Home"]
margin_left = 810.0
margin_top = 384.0
margin_right = 1110.0
margin_bottom = 696.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGameBtn" parent="Home/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 75 )
text = "Join Game"

[node name="CreateServerBtn" parent="Home/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 79.0
margin_right = 300.0
margin_bottom = 154.0
rect_min_size = Vector2( 300, 75 )
text = "Create Server"

[node name="SettingsBtn" parent="Home/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 158.0
margin_right = 300.0
margin_bottom = 233.0
rect_min_size = Vector2( 300, 75 )
text = "Settings"

[node name="ExitBtn" parent="Home/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 237.0
margin_right = 300.0
margin_bottom = 312.0
rect_min_size = Vector2( 300, 75 )
text = "Exit game"
[connection signal="pressed" from="Home/VBoxContainer/JoinGameBtn" to="." method="_on_JoinGameBtn_pressed"]
[connection signal="pressed" from="Home/VBoxContainer/CreateServerBtn" to="." method="_on_CreateServerBtn_pressed"]
[connection signal="pressed" from="Home/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="Home/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
